[package]
name = "onnxruntime-bert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
onnxruntime = { git = "https://github.com/ulagbulag-village/onnxruntime-rs" }
rust_tokenizers = "7.0"
ureq = "2.4"
